# anyswap

./: .cursorrules  Cargo.toml  README.md
app/: package-lock.json  package.json  tsconfig.json
app/lib/: index.ts
app/src/: admin-client.ts  client.ts  index.ts  token-utils.ts  types.ts  utils.ts
app/web/: package-lock.json  package.json  vite.config.ts
app/web/public/idl/: anyswap.json
app/web/src/: App.css  App.tsx
app/web/src/components/: AdminActions.tsx  AnySwapTest.tsx  CreateToken.tsx  UserActions.tsx  utils.ts
doc/: package-lock.json  package.json  vite.config.ts
doc/public/idl/: anyswap.json
doc/src/: App.tsx
doc/src/components/instructions/: AddLiquidity.tsx  AddTokenToPool.tsx  CreatePool.tsx  CreateToken.tsx  Instructions.css  MintToSelf.tsx  ModifyFee.tsx  ModifyTokenWeight.tsx  PoolInfo.tsx  PoolList.tsx  README.md  RemoveLiquidity.tsx  Swap.tsx  (+3 more)
doc/src/contexts/: StorageContext.tsx
doc/src/types/: anyswap.ts
programs/anyswap/: Cargo.toml
programs/anyswap/src/: lib.rs
programs/anyswap/src/instructions/: add_liquidity.rs  add_token.rs  create_pool.rs  mod.rs  modify_fee.rs  modify_weight.rs  remove_liquidity.rs  remove_token.rs  swap.rs
programs/anyswap/src/math/: fixedpoint.rs  fixedpoint.sol  i256.rs  logexpmath.rs  logexpmath.sol  logexpmath2.rs  math.rs  mod.rs
programs/anyswap/src/state/: item.rs  mod.rs  pool.rs  swap.rs
scripts/: calculate_test_swap.py  test_liquidity_calculation.py  test_swap_calculation.py
tests/: 100in100out.ts  10in10out.ts  3in3out.ts  anyswap.ts  fucksol2.ts  lp.ts  uniswap.ts  utils.ts
(+3 files in other folders)
